--- a/spring-batch-example/pom.xml
+++ b/spring-batch-example/pom.xml
@@ -17,6 +17,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<spring.batch.version>2.1.8.RELEASE</spring.batch.version>
+		<h2.version>1.4.200</h2.version>
 	</properties>
 
 	<dependencies>
@@ -73,7 +74,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.3.156</version>
+			<version>${h2.version}</version>
 		</dependency>
 		
 		<dependency>
