--- a/spring-batch-mvc/pom.xml
+++ b/spring-batch-mvc/pom.xml
@@ -16,6 +16,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<spring.version>3.0.5.RELEASE</spring.version>
+		<spring.batch.version>2.1.8.RELEASE</spring.batch.version>
 		<spring.integration.version>2.0.4.RELEASE</spring.integration.version>
 		<servlet.version>3.1.0</servlet.version>
 		<h2.version>1.4.200</h2.version>
@@ -61,9 +62,34 @@
 		
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-oxm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 			<scope>test</scope>
+		</dependency>
+		
+		<!-- spring-batch -->
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-core</artifactId>
+			<version>${spring.batch.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-infrastructure</artifactId>
+			<version>${spring.batch.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-test</artifactId>
+			<version>${spring.batch.version}</version>
 		</dependency>
 		
 		<!-- spring-integration -->
@@ -120,6 +146,12 @@
     		<groupId>commons-io</groupId>
     		<artifactId>commons-io</artifactId>
     		<version>1.2</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>org.codehaus.castor</groupId>
+    		<artifactId>castor-xml</artifactId>
+    		<version>1.3.2</version>
 		</dependency>
 		
 		<!-- h2 -->
