--- a/spring-batch-mvc/pom.xml
+++ b/spring-batch-mvc/pom.xml
@@ -148,6 +148,7 @@
     		<version>1.2</version>
 		</dependency>
 		
+		<!-- support artifact for spring-oxm -->
 		<dependency>
     		<groupId>org.codehaus.castor</groupId>
     		<artifactId>castor-xml</artifactId>
