--- a/h2launcher/pom.xml
+++ b/h2launcher/pom.xml
@@ -17,6 +17,7 @@
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<spring.batch.version>2.1.8.RELEASE</spring.batch.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<h2.version>1.4.200</h2.version>
 	</properties>
 
 	<dependencies>
@@ -53,7 +54,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.3.156</version>
+			<version>${h2.version}</version>
 		</dependency>
 	</dependencies>
 </project>
