--- a/spring-batch-example/pom.xml
+++ b/spring-batch-example/pom.xml
@@ -17,6 +17,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<spring.version>3.0.5.RELEASE</spring.version>
 		<spring.batch.version>2.1.8.RELEASE</spring.batch.version>
+		<spring.integration.version>2.0.4.RELEASE</spring.integration.version>
 	</properties>
 
 	<dependencies>
@@ -35,6 +36,28 @@
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-test</artifactId>
 			<version>${spring.batch.version}</version>
+		</dependency>
+		
+		<!-- spring-batch-integration -->
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-integration</artifactId>
+			<version>1.2.0.RELEASE</version>
+		</dependency>
+		
+		<!-- spring-integration -->
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-core</artifactId>
+			<version>${spring.integration.version}</version>
+		</dependency>
+		
+		<!-- spring-interation-jms -->
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-jms</artifactId>
+			<version>${spring.integration.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		
 		<!-- spring -->
@@ -80,6 +103,12 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.0.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-core</artifactId>
+			<version>5.3.0</version>
 		</dependency>
 	
 		<!-- test -->
